sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	var echange=true
	while (echange){
		for(i<-0 to length-2)
			if(tab(i)>tab(i+1)
				val tmp=tab(i)
				tab(i)=tab(i+1)
				tab(i+1)=tmp
				echange=true
	}
}
